--- a/utils/src/main/res/values/strings.xml
+++ b/utils/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-
+    <string name="app_name_covid19_indonesian">app-covid19-indonesian</string>
+    <string name="covid_19">Covid 19</string>
+    <string name="indonesian">Indonesian</string>
+    <string name="todo">todo</string>
+    <string name="close">Close</string>
 </resources>
