--- a/utils/src/main/res/values/strings.xml
+++ b/utils/src/main/res/values/strings.xml
@@ -1,7 +1,12 @@
 <resources>
-    <string name="app_name_covid19_indonesian">app-covid19-indonesian</string>
-    <string name="covid_19">Covid 19</string>
+    <string name="app_name_covid19_indonesian" translatable="false">app-covid19-indonesian</string>
+    <string name="data_pantauan_covid_19_indonesia">Data Pantauan COVID-19 Indonesia</string>
+    <string name="covid_19" translatable="false">Covid 19</string>
     <string name="indonesian">Indonesian</string>
-    <string name="todo">todo</string>
+    <string name="todo" translatable="false">todo</string>
     <string name="close">Close</string>
+    <string name="provinsi" translatable="false">Provinsi</string>
+    <string name="die">Meninggal</string>
+    <string name="recover">Sembuh</string>
+    <string name="positive">Positif</string>
 </resources>
